@@ -1,3 +1,8 @@
+next version
+----------------
+
+- don't require email setting for creating users
+
 0.9.4
 ----------------
 
